implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -298,7 +298,7 @@
                 <div class="device-mockup macbook_2015 silver">
                   <div class="device webgl-content">
                     <!--UAMI-VR Game-->
-                    <div class="screen" id="unityContainer" style="width: 960px; height: 600px">
+                    <div class="screen" id="unityContainer">
                     </div>
                     <!--UAMI-VR Game-->
                   </div>
