implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -309,10 +309,10 @@
                   <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
                   <div class="title">Uami-Recorrido-Virtual</div>
                 </div>-->
-                <div class="footer">
+                <div class="footer p-3">
                   <div class="webgl-logo"></div>
                   <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-                  <div class="title">Infinite Run</div>
+                  <div class="title dark-grey-text">Infinite Run</div>
                 </div>
               </div>
               <!-- Grid column -->
