implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -289,6 +289,20 @@
             </div>
             <!--Grid row-->
 
+            <!--Grid row-->
+            <div class="row d-flex justify-content-center head-mockup">
+              <div class="col-md-4 p-5">
+                <div class="webgl-logo"></div>
+              </div>
+              <div class="col-md-4 p-5">
+                <div class="title dark-grey-text text-center">Infinite Run</div>
+              </div>
+              <div class="col-md-4 p-5">
+                <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
+              </div>
+            </div>
+            <!--Grid row-->
+
             <!-- Grid row -->
             <div class="row d-flex justify-content-center">
 
@@ -309,11 +323,7 @@
                   <div class="fullscreen" onclick="gameInstance.SetFullscreen(1)"></div>
                   <div class="title">Uami-Recorrido-Virtual</div>
                 </div>-->
-                <div class="footer p-3">
-                  <div class="webgl-logo"></div>
-                  <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
-                  <div class="title dark-grey-text">Infinite Run</div>
-                </div>
+
               </div>
               <!-- Grid column -->
             </div>
