--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -291,13 +291,13 @@
 
             <!--Grid row-->
             <div class="row d-flex justify-content-center head-mockup">
-              <div class="col-md-4 p-5">
+              <div class="col-md-4 pb-5">
                 <div class="webgl-logo"></div>
               </div>
-              <div class="col-md-4 p-5">
+              <div class="col-md-4 pb-5">
                 <div class="title dark-grey-text text-center">Infinite Run</div>
               </div>
-              <div class="col-md-4 p-5">
+              <div class="col-md-4 pb-5">
                 <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
               </div>
             </div>
