implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -295,7 +295,9 @@
                 <div class="webgl-logo"></div>
               </div>
               <div class="col-md-4 p-5 align-self-center">
-                <div class="title dark-grey-text text-center">Infinite Run</div>
+                <div class="title dark-grey-text text-center">
+                  <h2>Infinite Run</h2>
+                </div>
               </div>
               <div class="col-md-4 p-5 align-self-center">
                 <div class="fullscreen" onclick="unityInstance.SetFullscreen(1)"></div>
