implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -291,18 +291,20 @@
 
             <!--Grid row-->
             <div class="row d-flex justify-content-center head-mockup">
-              <div class="col-md-4 p-2 align-self-center">
-                <img src="/img/unity/webgl-logo.png" width="204" alt="webgl-logo">
-              </div>
-              <div class="col-md-4 p-2 align-self-center">
-                <div class="dark-grey-text text-center">
-                  <h2>Infinite Run</h2>
+              <div class="container">
+                <div class="col-md-4 p-2 align-self-center">
+                  <img src="/img/unity/webgl-logo.png" width="204" alt="webgl-logo">
                 </div>
-              </div>
-              <div class="col-md-4 p-2 align-self-center">
-                <button class=" fullscreen btn btn-md cyan darken-2 m-0 z-depth-0 rounded" onclick="unityInstance.SetFullscreen(1)" type="button" id="button-screen">
-                  Press it for fullscreen mode, and ESC to return to this view<i class="fas fa-arrows-alt pl-2"></i></button>
-
+                <div class="col-md-4 p-2 align-self-center">
+                  <div class="dark-grey-text text-center">
+                    <h2>Infinite Run</h2>
+                  </div>
+                </div>
+                <div class="col-md-4 p-2 align-self-center">
+                  <p class="mb-4 dark-grey-text">Press it for fullscreen mode, and ESC to return to this view</p>
+                  <button class=" fullscreen btn btn-md cyan darken-2 m-0 z-depth-0 rounded" onclick="unityInstance.SetFullscreen(1)" type="button" id="button-screen">
+                    <i class="fas fa-arrows-alt pl-2"></i></button>
+                </div>
               </div>
             </div>
             <!--Grid row-->
