implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -300,9 +300,9 @@
                 </div>
               </div>
               <div class="col-md-4 p-2 text-center">
-                <p class="mb-4 dark-grey-text">Press it for fullscreen mode, and ESC to return to this view</p>
+                <p class="mb-4 dark-grey-text text-justify">Press it for fullscreen mode, and ESC to return</p>
                 <a class="fullscreen" onclick="unityInstance.SetFullscreen(1)">
-                  <i class="fas fa-arrows-alt fa-2x cyan darken-2 rounded"></i>
+                  <i class="fas fa-arrows-alt fa-3x cyan darken-2 rounded"></i>
                 </a>
               </div>
             </div>
