implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -261,7 +261,7 @@
               <!--Grid column-->
               <div class="col-md-6 p-5">
                 <h2 class="h2 mb-4 text-dark">You can try the current virtual tour</h2>
-                <p class="mb-4 dark-grey-text">Enjoy this virtual reality UAM-I that is still in development,
+                <p class="mb-4 dark-grey-text text-justify">Enjoy this virtual reality UAM-I that is still in development,
                   if you are interested in this type of project we can also develop it for you,
                   do not hesitate to contact us!.</p>
               </div>
