--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -291,18 +291,18 @@
 
             <!--Grid row-->
             <div class="row d-flex justify-content-center">
-              <div class="col-md-4 p-2 text-center">
+              <div class="col-md-4 text-center">
                 <img src="/img/unity/webgl-logo.png" width="204" alt="webgl-logo">
               </div>
-              <div class="col-md-4 p-2 text-center">
+              <div class="col-md-4 text-center">
                 <div class="dark-grey-text text-center">
                   <h2>Infinite Run</h2>
                 </div>
               </div>
-              <div class="col-md-4 p-2 text-center">
+              <div class="col-md-4 text-center">
                 <p class="mb-4 dark-grey-text text-justify">Press it for fullscreen mode, and ESC to return</p>
                 <a class="fullscreen" onclick="unityInstance.SetFullscreen(1)">
-                  <i class="fas fa-arrows-alt fa-3x cyan darken-2 rounded"></i>
+                  <i class="fas fa-arrows-alt fa-2x cyan darken-2 rounded"></i>
                 </a>
               </div>
             </div>
