--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -289,26 +289,17 @@
             </div>
             <!--Grid row-->
 
-            <!--Grid row-->
+            <!--Grid row title mockup-->
             <div class="row d-flex justify-content-center">
-              <div class="col-md-4 text-center">
-                <img src="/img/unity/webgl-logo.png" width="204" alt="webgl-logo">
-              </div>
-              <div class="col-md-4 text-center">
+              <div class="col-md-6 text-center">
                 <div class="dark-grey-text text-center">
-                  <h2>Infinite Run</h2>
+                  <h2>Uami-Recorrido-Virtual</h2>
                 </div>
               </div>
-              <div class="col-md-4 text-center">
-                <p class="mb-4 dark-grey-text text-justify">Press it for fullscreen mode, and ESC to return</p>
-                <a class="fullscreen" onclick="unityInstance.SetFullscreen(1)">
-                  <i class="fas fa-arrows-alt fa-2x cyan darken-2 rounded"></i>
-                </a>
-              </div>
             </div>
-            <!--Grid row-->
+            <!--Grid row title mockup-->
 
-            <!-- Grid row -->
+            <!-- Grid row device mockup-->
             <div class="row d-flex justify-content-center">
 
               <!-- Grid column -->
@@ -331,6 +322,20 @@
 
               </div>
               <!-- Grid column -->
+            </div>
+            <!-- Grid row device mockup-->
+
+            <!-- Grid row -->
+            <div class="row d-flex justify-content-between">
+              <div class="col-md-6 text-center">
+                <img src="/img/unity/webgl-logo.png" width="204" alt="webgl-logo">
+              </div>
+              <div class="col-md-6 text-center">
+                <p class="mb-4 dark-grey-text text-justify">Fullscreen mode</p>
+                <a class="fullscreen" onclick="unityInstance.SetFullscreen(1)">
+                  <i class="fas fa-arrows-alt fa-2x cyan darken-2 rounded"></i>
+                </a>
+              </div>
             </div>
             <!-- Grid row -->
           </div>
