implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -331,7 +331,7 @@
                 <img src="/img/unity/webgl-logo.png" width="204" alt="webgl-logo">
               </div>
               <div class="col-md-6 text-center">
-                <p class="mb-4 dark-grey-text text-justify">Fullscreen mode</p>
+                <span class="mb-4 dark-grey-text text-justify pr-3">Fullscreen mode</span>
                 <a class="fullscreen" onclick="unityInstance.SetFullscreen(1)">
                   <i class="fas fa-arrows-alt fa-2x cyan darken-2 rounded"></i>
                 </a>
