implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -326,11 +326,11 @@
             <!-- Grid row device mockup-->
 
             <!-- Grid row -->
-            <div class="row d-flex justify-content-between">
-              <div class="col-md-6 text-center">
+            <div class="row d-flex justify-content-between align-items-center py-3">
+              <div class="col-md-6 text-center py-1">
                 <img src="/img/unity/webgl-logo.png" width="204" alt="webgl-logo">
               </div>
-              <div class="col-md-6 text-center">
+              <div class="col-md-6 text-center py-1">
                 <span class="mb-4 dark-grey-text text-justify pr-3">Fullscreen mode</span>
                 <a class="fullscreen" onclick="unityInstance.SetFullscreen(1)">
                   <i class="fas fa-arrows-alt fa-2x cyan darken-2 rounded"></i>
