--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -27,8 +27,8 @@
   <!-- Custom styles -->
   <link rel="stylesheet" href="/css/style.css">
   <!--Unity-->
-  <script src="TemplateData/UnityProgress.js"></script>
-  <script src="Build/UnityLoader.js"></script>
+  <script src="/webgl/tap-and-fly/TemplateData/UnityProgress.js"></script>
+  <script src="/webgl/tap-and-fly/Build/UnityLoader.js"></script>
   <script>
     /*var gameInstance = UnityLoader.instantiate("gameContainer", "Build/UAM-WebGL.json", {
       onProgress: UnityProgress
@@ -293,7 +293,7 @@
             <div class="row d-flex justify-content-center">
               <div class="col-md-6 text-center">
                 <div class="dark-grey-text text-center">
-                  <h2>Uami-Recorrido-Virtual</h2>
+                  <h2>UAM-I-VR</h2>
                 </div>
               </div>
             </div>
