implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -27,8 +27,8 @@
   <!-- Custom styles -->
   <link rel="stylesheet" href="/css/style.css">
   <!--Unity-->
-  <script src="/webgl/tap-and-fly/TemplateData/UnityProgress.js"></script>
-  <script src="/webgl/tap-and-fly/Build/UnityLoader.js"></script>
+  <script src="TemplateData/UnityProgress.js"></script>
+  <script src="Build/UnityLoader.js"></script>
   <script>
     /*var gameInstance = UnityLoader.instantiate("gameContainer", "Build/UAM-WebGL.json", {
       onProgress: UnityProgress
