--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -27,8 +27,8 @@
   <!-- Custom styles -->
   <link rel="stylesheet" href="/css/style.css">
   <!--Unity-->
-  <script src="TemplateData/UnityProgress.js"></script>
-  <script src="Build/UnityLoader.js"></script>
+  <script src="webgl-uamivr/TemplateData/UnityProgress.js"></script>
+  <script src="webgl-uamivr/Build/UnityLoader.js"></script>
   <script>
     /*var gameInstance = UnityLoader.instantiate("gameContainer", "Build/UAM-WebGL.json", {
       onProgress: UnityProgress
@@ -325,19 +325,25 @@
             </div>
             <!-- Grid row device mockup-->
 
-            <!-- Grid row -->
+            <!-- Grid row footer mockup-->
             <div class="row d-flex justify-content-between align-items-center py-3">
+
+              <!-- Grid column -->
               <div class="col-md-6 text-center py-1">
                 <img src="/img/unity/webgl-logo.png" width="204" alt="webgl-logo">
               </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
               <div class="col-md-6 text-center py-1">
                 <span class="mb-4 dark-grey-text text-justify pr-3">Fullscreen mode</span>
                 <a class="fullscreen" onclick="unityInstance.SetFullscreen(1)">
                   <i class="fas fa-arrows-alt fa-2x cyan darken-2 rounded"></i>
                 </a>
               </div>
+              <!-- Grid column -->
             </div>
-            <!-- Grid row -->
+            <!-- Grid row footer mockup-->
           </div>
           <!--Card-->
         </section>
