implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -33,7 +33,7 @@
     /*var gameInstance = UnityLoader.instantiate("gameContainer", "Build/UAM-WebGL.json", {
       onProgress: UnityProgress
     });*/
-    var unityInstance = UnityLoader.instantiate("unityContainer", "Build/TapandFly.json", {
+    var unityInstance = UnityLoader.instantiate("unityContainer", "webgl-uamivr/Build/TapandFly.json", {
       onProgress: UnityProgress
     });
   </script>
