implementing uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -338,7 +338,7 @@
               <div class="col-md-6 text-center py-1">
                 <span class="mb-4 dark-grey-text text-justify pr-3">Fullscreen mode</span>
                 <a class="fullscreen" onclick="unityInstance.SetFullscreen(1)">
-                  <i class="fas fa-arrows-alt fa-lg cyan darken-2 rounded"></i>
+                  <i class="fas fa-arrows-alt fa-2x cyan darken-2 rounded"></i>
                 </a>
               </div>
               <!-- Grid column -->
