implement uami_vr.html view

--- a/frontend/games/uami_vr.html
+++ b/frontend/games/uami_vr.html
@@ -163,7 +163,7 @@
   <!--Main Navigation-->
 
   <!--Main layout-->
-  <main class="tpc-design px-5">
+  <main class="uamivr-design px-5">
 
     <!--Main container-->
     <div class="container-fluid">
