implement eduland.html view

--- a/frontend/games/eduland_ar.html
+++ b/frontend/games/eduland_ar.html
@@ -152,7 +152,7 @@
   <!--Main Navigation-->
 
   <!--Main layout-->
-  <main class="tpc-design px-5">
+  <main class="eduland-design px-5">
 
     <!--Main container-->
     <div class="container-fluid">
