--- a/about.html
+++ b/about.html
@@ -47,10 +47,10 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <!-- Left -->
           <ul class="navbar-nav nav-pills mr-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a class="nav-link waves-effect" href="index.html">Games<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active">
+            <li class="nav-item active" data-toggle="pill">
               <a class="nav-link waves-effect js-scroll-trigger" href="#page-top">About us<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
