--- a/about.html
+++ b/about.html
@@ -50,7 +50,7 @@
             <li class="nav-item">
               <a class="nav-link waves-effect" href="index.html">Games<span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item active" data-toggle="pill">
+            <li class="nav-item active red darken-2" data-toggle="pill">
               <a class="nav-link waves-effect js-scroll-trigger" href="#page-top">About us<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
