--- a/about.html
+++ b/about.html
@@ -46,7 +46,7 @@
         <!-- Links -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <!-- Left -->
-          <ul class="navbar-nav mr-auto">
+          <ul class="navbar-nav  nav-pills mr-auto">
             <li class="nav-item">
               <a class="nav-link waves-effect" href="index.html">Games</a>
             </li>
