--- a/about.html
+++ b/about.html
@@ -46,12 +46,12 @@
         <!-- Links -->
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
           <!-- Left -->
-          <ul class="navbar-nav  nav-pills mr-auto">
+          <ul class="navbar-nav nav-pills mr-auto">
             <li class="nav-item">
               <a class="nav-link waves-effect" href="index.html">Games</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link waves-effect js-scroll-trigger" data-toggle="pill" href="#page-top">About us<span class="sr-only teal lighten-2 rounded">(current)</span></a>
+              <a class="nav-link waves-effect js-scroll-trigger" data-toggle="pill" href="#page-top">About us<span class="sr-only teal lighten-2">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-effect" href="projects.html">Projects</a>
