implement about.html view

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
               <a class="nav-link waves-effect" href="index.html">Games</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link waves-effect js-scroll-trigger" data-toggle="pill" href="#page-top">About us<span class="sr-only teal lighten-2">(current)</span></a>
+              <a class="nav-link waves-effect js-scroll-trigger" href="#page-top">About us<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link waves-effect" href="projects.html">Projects</a>
