--- a/about.html
+++ b/about.html
@@ -358,10 +358,10 @@
             <!-- Grid column -->
             <div class="col-lg-4 col-md-12 mb-4">
               <!-- Rotating card -->
-              <div class="card-wrapper">
-                <div id="card-3" class="card card-rotating text-center">
+              <div class="card-wrapper flip-card">
+                <div id="card-3" class="card flip-card-inner card-rotating text-center">
                   <!-- Front Side -->
-                  <div class="face front">
+                  <div class="face front flip-card-front">
                     <!-- Image -->
                     <div class="card-up">
                       <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(14).jpg" alt="Team member card image">
@@ -381,7 +381,7 @@
                   </div>
                   <!-- Front Side -->
                   <!-- Back Side -->
-                  <div class="face back">
+                  <div class="face back flip-card-back">
                     <!-- Content -->
                     <div class="card-body">
                       <!-- Content -->
@@ -552,6 +552,7 @@
   <script type="text/javascript" src="js/jquery-easing.min.js"></script>
   <!-- Custom scripts (optional) -->
   <script type="text/javascript" src="js/new-age.min.js"></script>
+  <script type="text/javascript" src="js/yanger.js"></script>
 
   <!--Modal: modalCookie-->
   <div class="modal fade bottom cookieModal" id="cookieModal" tabindex="-1" role="dialog" aria-labelledby="cookieModalLabel" aria-hidden="true" data-backdrop="true">
