implement about.html view

--- a/about.html
+++ b/about.html
@@ -358,10 +358,10 @@
             <!-- Grid column -->
             <div class="col-lg-4 col-md-12 mb-4">
               <!-- Rotating card -->
-              <div class="card-wrapper flip-card">
-                <div id="card-3" class="card flip-card-inner card-rotating text-center">
+              <div class="card-wrapper">
+                <div id="card-3" class="card card-rotating text-center">
                   <!-- Front Side -->
-                  <div class="face front flip-card-front">
+                  <div class="face front">
                     <!-- Image -->
                     <div class="card-up">
                       <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20(14).jpg" alt="Team member card image">
@@ -381,7 +381,7 @@
                   </div>
                   <!-- Front Side -->
                   <!-- Back Side -->
-                  <div class="face back flip-card-back">
+                  <div class="face back">
                     <!-- Content -->
                     <div class="card-body">
                       <!-- Content -->
