implement about.html view

--- a/about.html
+++ b/about.html
@@ -209,10 +209,10 @@
             <div class="col-lg-4 col-md-12 mb-4">
 
               <!-- Rotating card -->
-              <div class="card-wrapper">
-                <div id="card-1" class="card card-rotating text-center">
+              <div class="card-wrapper flip-card">
+                <div id="card-1" class="card card-rotating flip-card-inner text-center">
                   <!-- Front Side -->
-                  <div class="face front">
+                  <div class="face front flip-card-front">
                     <!-- Image -->
                     <div class="card-up">
                       <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/19.jpg" alt="Team member card image">
@@ -232,7 +232,7 @@
                   </div>
                   <!-- Front Side -->
                   <!-- Back Side -->
-                  <div class="face back">
+                  <div class="face back flip-card-back">
                     <!-- Content -->
                     <div class="card-body">
                       <!-- Content -->
