--- a/about.html
+++ b/about.html
@@ -293,7 +293,7 @@
                       <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Others/images/82.jpg" alt="Team member card image">
                     </div>
                     <!-- Avatar -->
-                    <div class="avatar mx-auto white">
+                    <div class="avatar avatar-photo mx-auto white">
                       <img src="https://mdbootstrap.com/img/Photos/Avatars/img(20).jpg" class="rounded-circle" alt="Second sample avatar image">
                     </div>
                     <!-- Content -->
