correcting typewrite error in js

--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
   <!-- MDB core JavaScript -->
   <script type="text/javascript" src="js/mdb.min.js"></script>
   <!-- Plugin JavaScript -->
-  <script type="text/javascript" src="js/jquery-easing.min.js"></script>
+  <script type="text/javascript" src="js/jquery.easing.min.js"></script>
   <!-- Custom scripts (optional) -->
   <script type="text/javascript" src="js/new-age.min.js"></script>
 
