implement about.html view

--- a/about.html
+++ b/about.html
@@ -203,10 +203,10 @@
                   eum porro a pariatur veniam.</p>
 
                 <!-- Grid row-->
-                <div class="row text-center text-md-left">
+                <div class="row d-flex justify-content-center">
 
                   <!-- Grid column -->
-                  <div class="col-md-4 mb-5 d-md-flex justify-content-between">
+                  <div class="col-md-4 mb-5 d-md-flex justify-content-start">
                     <div class="avatar mb-md-0 mb-4 mx-4">
                       <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(32).jpg" class="rounded z-depth-1" alt="Sample avatar">
                     </div>
@@ -232,7 +232,7 @@
                   <!-- Grid column -->
 
                   <!-- Grid column -->
-                  <div class="col-md-4 mb-5 d-md-flex justify-content-between">
+                  <div class="col-md-4 mb-5 d-md-flex justify-content-center">
                     <div class="avatar mb-md-0 mb-4 mx-4">
                       <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(20).jpg" class="rounded z-depth-1" alt="Sample avatar">
                     </div>
@@ -257,14 +257,8 @@
                   </div>
                   <!-- Grid column -->
 
-                </div>
-                <!-- Grid row-->
-
-                <!-- Grid row-->
-                <div class="row text-center text-md-left">
-
                   <!-- Grid column -->
-                  <div class="col-md-4 mb-5 d-md-flex justify-content-between">
+                  <div class="col-md-4 mb-5 d-md-flex justify-content-end">
                     <div class="avatar mb-md-0 mb-4 mx-4">
                       <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg" class="rounded z-depth-1" alt="Sample avatar">
                     </div>
@@ -289,10 +283,10 @@
                   </div>
                   <!-- Grid column -->
 
-
-
                 </div>
                 <!-- Grid row-->
+
+
 
               </section>
               <!--Section: Content-->
