--- a/about.html
+++ b/about.html
@@ -187,50 +187,111 @@
               <!--Grid column-->
             </div>
             <!--Grid row-->
+
+
+
+            <div class="container text-center dark-grey-text my-5 p-5 z-depth-1">
+
+
+              <h6 class="font-weight-bold text-center grey-text text-uppercase small mb-4">Team</h6>
+              <!-- Section heading -->
+              <h2 class="font-weight-bold text-center dark-grey-text pb-2">Our Designers</h2>
+              <hr class="w-header my-4">
+              <!-- Section description -->
+              <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
+
+              <!-- Grid row -->
+              <div class="row">
+
+                <!-- Grid column -->
+                <div class="col-md-3 mb-4">
+
+                  <div class="view z-depth-1 mb-4">
+                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid mx-auto" alt="smaple image">
+                  </div>
+                  <h6 class="font-weight-bold">Alicia Deyns</h6>
+                  <small class="text-muted">Co-funder & CEO</small>
+                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 mb-4">
+
+                  <div class="view z-depth-1 mb-4">
+                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid mx-auto" alt="smaple image">
+                  </div>
+                  <h6 class="font-weight-bold">Tommy Brian</h6>
+                  <small class="text-muted">Co-funder & CTO</small>
+                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 mb-4">
+
+                  <div class="view z-depth-1 mb-4">
+                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg" class="img-fluid mx-auto" alt="smaple image">
+                  </div>
+                  <h6 class="font-weight-bold">Kate Witson</h6>
+                  <small class="text-muted">Lead Developer</small>
+                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+
+                </div>
+                <!-- Grid column -->
+
+                <!-- Grid column -->
+                <div class="col-md-3 mb-4">
+
+                  <div class="view z-depth-1 mb-4">
+                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid mx-auto" alt="smaple image">
+                  </div>
+                  <h6 class="font-weight-bold">Barbara Lenny</h6>
+                  <small class="text-muted">Designer</small>
+                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                    <li><i class="fab fa-twitter mx-2"></i></li>
+                    <li><i class="fab fa-facebook-f mx-2"></i></li>
+                    <li><i class="fab fa-instagram mx-2"></i></li>
+                  </ul>
+
+                </div>
+                <!-- Grid column -->
+
+              </div>
+              <!-- Grid row -->
+
+
+            </div>
+
+
+
+
+
+
           </div>
           <!--Card-->
         </section>
         <!--Section: Content-->
 
-        <div class="container">
-          <div class="row">
-            <div class="col-lg-3 col-sm-6">
 
-              <div class="card hovercard">
-                <div class="cardheader">
-
-                </div>
-                <div class="avatar">
-                  <img alt="" src="http://lorempixel.com/100/100/people/9/">
-                </div>
-                <div class="info">
-                  <div class="title">
-                    <a target="_blank" href="https://scripteden.com/">Script Eden</a>
-                  </div>
-                  <div class="desc">Passionate designer</div>
-                  <div class="desc">Curious developer</div>
-                  <div class="desc">Tech geek</div>
-                </div>
-                <div class="bottom">
-                  <a class="btn btn-primary btn-twitter btn-sm" href="https://twitter.com/webmaniac">
-                    <i class="fa fa-twitter"></i>
-                  </a>
-                  <a class="btn btn-danger btn-sm" rel="publisher" href="https://plus.google.com/+ahmshahnuralam">
-                    <i class="fa fa-google-plus"></i>
-                  </a>
-                  <a class="btn btn-primary btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
-                    <i class="fa fa-facebook"></i>
-                  </a>
-                  <a class="btn btn-warning btn-sm" rel="publisher" href="https://plus.google.com/shahnuralam">
-                    <i class="fa fa-behance"></i>
-                  </a>
-                </div>
-              </div>
-
-            </div>
-
-          </div>
-        </div>
 
 
 
