--- a/about.html
+++ b/about.html
@@ -190,96 +190,94 @@
 
 
 
-            <div class="container text-center dark-grey-text my-5 p-5 z-depth-1">
 
 
-              <h6 class="font-weight-bold text-center grey-text text-uppercase small mb-4">Team</h6>
-              <!-- Section heading -->
-              <h2 class="font-weight-bold text-center dark-grey-text pb-2">Our Designers</h2>
-              <hr class="w-header my-4">
-              <!-- Section description -->
-              <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
+            <h6 class="font-weight-bold text-center grey-text text-uppercase small mb-4">Team</h6>
+            <!-- Section heading -->
+            <h2 class="font-weight-bold text-center dark-grey-text pb-2">Our Designers</h2>
+            <hr class="w-header my-4">
+            <!-- Section description -->
+            <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
 
-              <!-- Grid row -->
-              <div class="row">
+            <!-- Grid row -->
+            <div class="row text-center dark-grey-text my-5 p-5 z-depth-1">
 
-                <!-- Grid column -->
-                <div class="col-md-3 mb-4">
+              <!-- Grid column -->
+              <div class="col-md-3 mb-4">
 
-                  <div class="view z-depth-1 mb-4">
-                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid mx-auto" alt="smaple image">
-                  </div>
-                  <h6 class="font-weight-bold">Alicia Deyns</h6>
-                  <small class="text-muted">Co-funder & CEO</small>
-                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
-                    <li><i class="fab fa-twitter mx-2"></i></li>
-                    <li><i class="fab fa-facebook-f mx-2"></i></li>
-                    <li><i class="fab fa-instagram mx-2"></i></li>
-                  </ul>
-
+                <div class="view z-depth-1 mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid mx-auto" alt="smaple image">
                 </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-3 mb-4">
-
-                  <div class="view z-depth-1 mb-4">
-                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid mx-auto" alt="smaple image">
-                  </div>
-                  <h6 class="font-weight-bold">Tommy Brian</h6>
-                  <small class="text-muted">Co-funder & CTO</small>
-                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
-                    <li><i class="fab fa-twitter mx-2"></i></li>
-                    <li><i class="fab fa-facebook-f mx-2"></i></li>
-                    <li><i class="fab fa-instagram mx-2"></i></li>
-                  </ul>
-
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-3 mb-4">
-
-                  <div class="view z-depth-1 mb-4">
-                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg" class="img-fluid mx-auto" alt="smaple image">
-                  </div>
-                  <h6 class="font-weight-bold">Kate Witson</h6>
-                  <small class="text-muted">Lead Developer</small>
-                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
-                    <li><i class="fab fa-twitter mx-2"></i></li>
-                    <li><i class="fab fa-facebook-f mx-2"></i></li>
-                    <li><i class="fab fa-instagram mx-2"></i></li>
-                  </ul>
-
-                </div>
-                <!-- Grid column -->
-
-                <!-- Grid column -->
-                <div class="col-md-3 mb-4">
-
-                  <div class="view z-depth-1 mb-4">
-                    <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid mx-auto" alt="smaple image">
-                  </div>
-                  <h6 class="font-weight-bold">Barbara Lenny</h6>
-                  <small class="text-muted">Designer</small>
-                  <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                  <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
-                    <li><i class="fab fa-twitter mx-2"></i></li>
-                    <li><i class="fab fa-facebook-f mx-2"></i></li>
-                    <li><i class="fab fa-instagram mx-2"></i></li>
-                  </ul>
-
-                </div>
-                <!-- Grid column -->
+                <h6 class="font-weight-bold">Alicia Deyns</h6>
+                <small class="text-muted">Co-funder & CEO</small>
+                <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                  <li><i class="fab fa-twitter mx-2"></i></li>
+                  <li><i class="fab fa-facebook-f mx-2"></i></li>
+                  <li><i class="fab fa-instagram mx-2"></i></li>
+                </ul>
 
               </div>
-              <!-- Grid row -->
+              <!-- Grid column -->
 
+              <!-- Grid column -->
+              <div class="col-md-3 mb-4">
+
+                <div class="view z-depth-1 mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid mx-auto" alt="smaple image">
+                </div>
+                <h6 class="font-weight-bold">Tommy Brian</h6>
+                <small class="text-muted">Co-funder & CTO</small>
+                <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                  <li><i class="fab fa-twitter mx-2"></i></li>
+                  <li><i class="fab fa-facebook-f mx-2"></i></li>
+                  <li><i class="fab fa-instagram mx-2"></i></li>
+                </ul>
+
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-3 mb-4">
+
+                <div class="view z-depth-1 mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg" class="img-fluid mx-auto" alt="smaple image">
+                </div>
+                <h6 class="font-weight-bold">Kate Witson</h6>
+                <small class="text-muted">Lead Developer</small>
+                <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                  <li><i class="fab fa-twitter mx-2"></i></li>
+                  <li><i class="fab fa-facebook-f mx-2"></i></li>
+                  <li><i class="fab fa-instagram mx-2"></i></li>
+                </ul>
+
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-3 mb-4">
+
+                <div class="view z-depth-1 mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid mx-auto" alt="smaple image">
+                </div>
+                <h6 class="font-weight-bold">Barbara Lenny</h6>
+                <small class="text-muted">Designer</small>
+                <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                  <li><i class="fab fa-twitter mx-2"></i></li>
+                  <li><i class="fab fa-facebook-f mx-2"></i></li>
+                  <li><i class="fab fa-instagram mx-2"></i></li>
+                </ul>
+
+              </div>
+              <!-- Grid column -->
 
             </div>
+            <!-- Grid row -->
+
+
 
 
 
