--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
             <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
 
             <!-- Grid row -->
-            <div class="row text-center dark-grey-text my-5 p-5 z-depth-1">
+            <div class="row row-cols-3 text-center dark-grey-text my-5 p-5">
 
               <!-- Grid column -->
               <div class="col-md-3 mb-4">
@@ -256,6 +256,11 @@
               </div>
               <!-- Grid column -->
 
+            </div>
+            <!-- Grid row -->
+
+            <!-- Grid row -->
+            <div class="row row-cols-3 text-center dark-grey-text my-5 p-5">
               <!-- Grid column -->
               <div class="col-md-3 mb-4">
 
@@ -274,9 +279,44 @@
               </div>
               <!-- Grid column -->
 
+              <!-- Grid column -->
+              <div class="col-md-3 mb-4">
+
+                <div class="view z-depth-1 mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg" class="img-fluid mx-auto" alt="smaple image">
+                </div>
+                <h6 class="font-weight-bold">Barbara Lenny</h6>
+                <small class="text-muted">Designer</small>
+                <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                  <li><i class="fab fa-twitter mx-2"></i></li>
+                  <li><i class="fab fa-facebook-f mx-2"></i></li>
+                  <li><i class="fab fa-instagram mx-2"></i></li>
+                </ul>
+
+              </div>
+              <!-- Grid column -->
+
+              <!-- Grid column -->
+              <div class="col-md-3 mb-4">
+
+                <div class="view z-depth-1 mb-4">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid mx-auto" alt="smaple image">
+                </div>
+                <h6 class="font-weight-bold">Barbara Lenny</h6>
+                <small class="text-muted">Designer</small>
+                <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                  <li><i class="fab fa-twitter mx-2"></i></li>
+                  <li><i class="fab fa-facebook-f mx-2"></i></li>
+                  <li><i class="fab fa-instagram mx-2"></i></li>
+                </ul>
+
+              </div>
+              <!-- Grid column -->
+
             </div>
             <!-- Grid row -->
-
 
 
 
