implement about.html view

--- a/about.html
+++ b/about.html
@@ -206,7 +206,7 @@
               <div class="col-md-4 mb-4">
 
                 <div class="view z-depth-1 mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid mx-auto" alt="smaple image">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Alicia Deyns</h6>
                 <small class="text-muted">Co-funder & CEO</small>
@@ -224,7 +224,7 @@
               <div class="col-md-4 mb-4">
 
                 <div class="view z-depth-1 mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid mx-auto" alt="smaple image">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Tommy Brian</h6>
                 <small class="text-muted">Co-funder & CTO</small>
@@ -242,7 +242,7 @@
               <div class="col-md-4 mb-4">
 
                 <div class="view z-depth-1 mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg" class="img-fluid mx-auto" alt="smaple image">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Kate Witson</h6>
                 <small class="text-muted">Lead Developer</small>
@@ -265,7 +265,7 @@
               <div class="col-md-4 mb-4">
 
                 <div class="view z-depth-1 mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid mx-auto" alt="smaple image">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
                 <small class="text-muted">Designer</small>
@@ -283,7 +283,7 @@
               <div class="col-md-4 mb-4">
 
                 <div class="view z-depth-1 mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg" class="img-fluid mx-auto" alt="smaple image">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
                 <small class="text-muted">Designer</small>
@@ -301,7 +301,7 @@
               <div class="col-md-4 mb-4">
 
                 <div class="view z-depth-1 mb-4">
-                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid mx-auto" alt="smaple image">
+                  <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
                 <small class="text-muted">Designer</small>
