implement about.html view

--- a/about.html
+++ b/about.html
@@ -205,7 +205,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="view z-depth-1 mb-4">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Alicia Deyns</h6>
@@ -223,7 +223,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="view z-depth-1 mb-4">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Tommy Brian</h6>
@@ -241,7 +241,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="view z-depth-1 mb-4">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Kate Witson</h6>
@@ -264,7 +264,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="view z-depth-1 mb-4">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
@@ -282,7 +282,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="view z-depth-1 mb-4">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
@@ -300,7 +300,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="view z-depth-1 mb-4">
+                <div class="w-200 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
