implement about.html view

--- a/about.html
+++ b/about.html
@@ -200,7 +200,7 @@
             <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
 
             <!-- Grid row -->
-            <div class="row row-cols-3 text-center dark-grey-text my-5 p-5">
+            <div class="row text-center dark-grey-text my-5 p-5">
 
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
@@ -211,7 +211,7 @@
                 <h6 class="font-weight-bold">Alicia Deyns</h6>
                 <small class="text-muted">Co-funder & CEO</small>
                 <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
                   <li><i class="fab fa-twitter mx-2"></i></li>
                   <li><i class="fab fa-facebook-f mx-2"></i></li>
                   <li><i class="fab fa-instagram mx-2"></i></li>
@@ -229,7 +229,7 @@
                 <h6 class="font-weight-bold">Tommy Brian</h6>
                 <small class="text-muted">Co-funder & CTO</small>
                 <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
                   <li><i class="fab fa-twitter mx-2"></i></li>
                   <li><i class="fab fa-facebook-f mx-2"></i></li>
                   <li><i class="fab fa-instagram mx-2"></i></li>
@@ -247,7 +247,7 @@
                 <h6 class="font-weight-bold">Kate Witson</h6>
                 <small class="text-muted">Lead Developer</small>
                 <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
                   <li><i class="fab fa-twitter mx-2"></i></li>
                   <li><i class="fab fa-facebook-f mx-2"></i></li>
                   <li><i class="fab fa-instagram mx-2"></i></li>
@@ -260,7 +260,7 @@
             <!-- Grid row -->
 
             <!-- Grid row -->
-            <div class="row row-cols-3 text-center dark-grey-text my-5 p-5">
+            <div class="row text-center dark-grey-text my-5 p-5">
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
@@ -270,7 +270,7 @@
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
                 <small class="text-muted">Designer</small>
                 <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
                   <li><i class="fab fa-twitter mx-2"></i></li>
                   <li><i class="fab fa-facebook-f mx-2"></i></li>
                   <li><i class="fab fa-instagram mx-2"></i></li>
@@ -288,7 +288,7 @@
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
                 <small class="text-muted">Designer</small>
                 <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
                   <li><i class="fab fa-twitter mx-2"></i></li>
                   <li><i class="fab fa-facebook-f mx-2"></i></li>
                   <li><i class="fab fa-instagram mx-2"></i></li>
@@ -306,7 +306,7 @@
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
                 <small class="text-muted">Designer</small>
                 <p class="mt-3 text-muted">Sed ut perspiciatis unde omnis natus accusantium.</p>
-                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 text-muted">
+                <ul class="list-unstyled d-flex justify-content-center mt-3 mb-0 red-text">
                   <li><i class="fab fa-twitter mx-2"></i></li>
                   <li><i class="fab fa-facebook-f mx-2"></i></li>
                   <li><i class="fab fa-instagram mx-2"></i></li>
