implement about.html view

--- a/about.html
+++ b/about.html
@@ -165,11 +165,9 @@
             <div class="row d-flex justify-content-center">
               <!--Device column-->
               <div class="col-md-9 pt-5">
-                <h3 class="text-center text-dark mb-4 pb-2">Mission</h3>
-                <p class="text-center dark-grey-text w-responsive mx-auto mb-5">Create fun, high-quality video games
-                  to grow the industry in Mexico;
-                  willing to learn and teach to work
-                  in general!.</p>
+                <h2 class="text-center text-dark mb-4 pb-2">Mission</h2>
+                <p class="lead text-center dark-grey-text w-responsive mx-auto mb-5">Create fun, high-quality video games to grow the industry in Mexico;
+                  willing to learn and teach to work in general!.</p>
               </div>
               <!--Device column-->
 
@@ -180,8 +178,8 @@
             <div class="row d-flex justify-content-center">
               <!--Grid column-->
               <div class="col-md-9 p-5">
-                <h3 class="text-center text-dark mb-4 pb-2">Vision</h3>
-                <p class="text-center dark-grey-text w-responsive mx-auto mb-5">Be the leading study in the development of
+                <h2 class="text-center text-dark mb-4 pb-2">Vision</h2>
+                <p class="lead text-center dark-grey-text w-responsive mx-auto mb-5">Be the leading study in the development of
                   video games, virtual and augmented reality in Mexico.</p>
               </div>
               <!--Grid column-->
@@ -194,7 +192,7 @@
 
             <h6 class="font-weight-bold text-center grey-text text-uppercase small mb-4">Team</h6>
             <!-- Section heading -->
-            <h2 class="font-weight-bold text-center dark-grey-text pb-2">Our Designers</h2>
+            <h2 class=" text-center dark-grey-text pb-2">Our Team</h2>
             <hr class="w-header my-4">
             <!-- Section description -->
             <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
