implement about.html view

--- a/about.html
+++ b/about.html
@@ -221,7 +221,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-200 mx-auto">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Tommy Brian</h6>
