implement about.html view

--- a/about.html
+++ b/about.html
@@ -203,10 +203,10 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-280 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
-                <div class="w-40 mx-auto mb-4">
+                <div class="mini-avatar mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Alicia Deyns</h6>
@@ -224,7 +224,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-280 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(3).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Tommy Brian</h6>
@@ -242,7 +242,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-280 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(15).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Kate Witson</h6>
@@ -265,7 +265,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-280 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(7).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
@@ -283,7 +283,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-280 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(29).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
@@ -301,7 +301,7 @@
               <!-- Grid column -->
               <div class="col-md-4 mb-4">
 
-                <div class="w-200 mx-auto mb-4">
+                <div class="w-280 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(30).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Barbara Lenny</h6>
