implement about.html view

--- a/about.html
+++ b/about.html
@@ -206,7 +206,7 @@
                 <div class="w-280 mx-auto mb-4">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded mx-auto" alt="smaple image">
                 </div>
-                <div class="mini-avatar mx-auto">
+                <div class="mini-avatar mx-auto mb-2">
                   <img src="https://mdbootstrap.com/img/Photos/Avatars/img%20(2).jpg" class="img-fluid rounded-circle mx-auto" alt="smaple image">
                 </div>
                 <h6 class="font-weight-bold">Alicia Deyns</h6>
