implement about.html view

--- a/about.html
+++ b/about.html
@@ -166,7 +166,7 @@
               <!--Device column-->
               <div class="col-md-9 pt-5">
                 <h2 class="text-center text-dark mb-4 pb-2">Mission</h2>
-                <p class="lead text-center dark-grey-text w-responsive mx-auto mb-5">Create fun, high-quality video games to grow the industry in Mexico;
+                <p class="lead text-center dark-grey-text w-responsive mx-2 mb-5">Create fun, high-quality video games to grow the industry in Mexico;
                   willing to learn and teach to work in general!.</p>
               </div>
               <!--Device column-->
@@ -179,7 +179,7 @@
               <!--Grid column-->
               <div class="col-md-9 p-5">
                 <h2 class="text-center text-dark mb-4 pb-2">Vision</h2>
-                <p class="lead text-center dark-grey-text w-responsive mx-auto mb-5">Be the leading study in the development of
+                <p class="lead text-center dark-grey-text w-responsive mx-2 mb-5">Be the leading study in the development of
                   video games, virtual and augmented reality in Mexico.</p>
               </div>
               <!--Grid column-->
@@ -195,7 +195,7 @@
             <h2 class=" text-center dark-grey-text pb-2">Our Team</h2>
             <hr class="w-header my-4">
             <!-- Section description -->
-            <p class="lead text-center text-muted pt-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
+            <p class="lead text-center text-muted pt-2  mx-2 mb-5">Enim ad minim exercitation ullamco laboris nisi ut ex aliquip.</p>
 
             <!-- Grid row -->
             <div class="row text-center dark-grey-text my-5 p-5">
